# nitro-compiler

./: Cargo.toml  README.md
docs/: installation.md  introduction.md  phase.md
src/: lib.rs  main.rs
src/assembler/: mod.rs
src/codegen/: mod.rs
src/ir/: builder.rs  mod.rs
src/lexer/: mod.rs  token_utils.rs  tokens.rs
src/optimization/: mod.rs
src/parser/: ast.rs  errors.rs  grammar.rs  mod.rs
src/semantic/: mod.rs
