[package]
name = "nitro-compiler"
version = "1.0.0"
license = "MIT"
repository = "https://github.com/eehcx/nitro-compiler"
authors = ["Enoc Hernández <eehcx.contacto@gmail.com>"]
edition = "2021"

[dependencies]
logos = "0.13.0"
yap = "0.1.0"
wasm-bindgen = "0.2"
cranelift = "0.93.0"
env_logger = "0.10.0"
log = "0.4.20"
